Fix layout shift in stacked topper

--- a/styles/modules/topperimage.module.less
+++ b/styles/modules/topperimage.module.less
@@ -64,9 +64,13 @@
   }
 }
 
-.c-img {
+.c-container-stacked {
+  padding-bottom: var(--img-bottom-padding-ratio);
+}
+
+.c-img-stacked {
   display: block;
-  position: relative;
+  position: absolute;
   margin: 0;
   padding: 0;
   width: 100%;
